--- a/.minecraft/config/randomtweaker.cfg
+++ b/.minecraft/config/randomtweaker.cfg
@@ -2,28 +2,8 @@
 
 general {
 
-    randomtweaker {
-        # If true, when entering a world for the first time, it will generate a value of OriginalSanity randomly. Otherwise, it is based on 100. [default : true]
-        B:OriginalSanity=false
-
-        # If true, the sanity function will be enabled. [default : false]
-        B:PlayerSanity=false
-
-        # If true, Allow CrT to manipulate the file "randomtweaker.prop". [default: false]
-        B:Prop=true
-
-        # This option decide the position of Sanity hud, the first parameter is the width, The second parameter is the height.
-        # The specific position is width and height of the game window divided by this number.
-        # [If the unit of measurement is px, then it refer to a fixed coordinate. e.g. 102px]
-        # [default : <6.0, 1.152>
-        S:SanityPos <
-            6.0
-            1.152
-         >
-    }
-
     botania {
-        # If true, the hydroangeas won't decay. [Valid only for modified results | default: false]
+        # If true, the hydroangeas will be decay. [Valid only for modified results | default: false]
         B:HydroangeasDecay=false
 
         # How much mana is max of hydroangeas? [Valid only for modified results | default: 18000]
@@ -48,39 +28,19 @@ general {
         B:OrechidModified=false
     }
 
-    thaumcraft {
-        # If true, The original DreamJournal will be no longer available. [default: false]
-        B:DreamJournal=true
-    }
-
-    twilightforest {
-        # Modify the liquid of Twilight forest portal. [Corresponding Mod Needed | default: water]
-        S:TFPortalLiquid=water
-    }
-
     ftbultimine {
         # If true, Allow Crt to Control the FTBUltimine enable
         B:AllowCrTControl=false
     }
 
-    toughasnails {
-        # If true, cancel Temperature when the player transforms into a android. [default: true]
-        B:AndroidTemperature=true
+    thaumcraft {
+        # If true, The original DreamJournal will be no longer available. [default: false]
+        B:DreamJournal=true
+    }
 
-        # If true, cancel Thirst when the player transforms into a android. [default: true]
-        B:AndroidThirst=true
-
-        # If 'B: AndroidThirst' false, Select the skill you need to unlock to cancel your Temperature. [default: 14 [0-21]]
-        I:SelectedStatTemperature=14
-
-        # If 'B: AndroidThirst' false, Select the skill you need to unlock to cancel your Thirst. [default: 6 [0-21]]
-        I:SelectedStatThirst=6
-
-        # If true, enable 'B: SelectedStatTemperature'. [default: true]
-        B:SelectedStatsTemperature=false
-
-        # If true, enable 'B: SelectedStatThirst'. [default: true]
-        B:SelectedStatsThirst=false
+    randomtweaker {
+        # If true, Allow CrT to manipulate the file "rt.properties". [default: false]
+        B:Prop=false
     }
 
 }
